# AiSS

./: .dockerignore  .gitignore  AiSS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
content/actors/: actor-dr-lin.yaml  actor-dr-mysterious.yaml  actor-gamer-hao.yaml  actor-grandma-li.yaml  actor-influencer-jay.yaml  actor-librarian-fang.yaml  actor-mr-wang.yaml  actor-ms-chen.yaml  actor-news-anchor.yaml  actor-nurse-lin.yaml  actor-parent-huang.yaml  actor-student-xiao-ming.yaml  actor-teacher-wu.yaml  actor-uncle-taxi.yaml  actor-youtuber-mei.yaml
content/deception-patterns/: pattern-charisma-override.yaml  pattern-cherry-picking.yaml  pattern-confident-wrong-fact.yaml  pattern-fake-citation.yaml  pattern-false-authority.yaml  pattern-fear-appeal.yaml  pattern-hasty-generalization.yaml  pattern-outdated-info.yaml
content/topics/: q-001.yaml  q-002.yaml  q-003.yaml  q-004.yaml  q-005.yaml  q-006.yaml  q-007.yaml  q-008.yaml  q-009.yaml  q-010.yaml
crates/aiss-import/: Cargo.toml
crates/aiss-import/src/: main.rs
crates/aiss-import/src/importers/: actors.rs  deceptions.rs  format.rs  mod.rs
crates/infolit-game/: Cargo.toml
crates/infolit-game/src/: actor.rs  deception.rs  lib.rs  main.rs  pacing.rs  selector.rs  session.rs  topic.rs
crates/infolit-web/: Cargo.toml
crates/infolit-web/src/: main.rs
crates/infolit-web/static/: index.html
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: error.rs  lib.rs  provider.rs  types.rs
crates/llm-gateway/src/adapters/: mod.rs  ollama.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
docker/: Dockerfile
docker-infolit/: Cargo.toml
docker-infolit/src/: main.rs
docs/: 000-MOC.md  DOCKER-REVIEW.md  PROJECT-STATUS.md
docs/architecture/: ADR-001-llm-provider-trait.md  ADR-002-infolit-game-loop.md  ADR-003-affinity-system.md
docs/research/: initial-plan-2026-04.md
scripts/: start-local.ps1  start-local.sh
server/src/: main.rs
target2/: .rustc_info.json
target2/debug/: infolit-cli.d  libinfolit_game.d
target2/debug/.fingerprint/adler2-4294c3e49c5c7e69/: lib-adler2  lib-adler2.json
target2/debug/.fingerprint/aiss-import-2dca69c823564c66/: dep-test-bin-aiss-import  test-bin-aiss-import  test-bin-aiss-import.json
target2/debug/.fingerprint/anstream-b26006d1de94490d/: lib-anstream  lib-anstream.json
target2/debug/.fingerprint/anstyle-e24f57ad3a0e6ff9/: lib-anstyle  lib-anstyle.json
target2/debug/.fingerprint/anstyle-parse-4e50c6167a519173/: lib-anstyle_parse  lib-anstyle_parse.json
target2/debug/.fingerprint/anstyle-query-f4d857f5d4bb7966/: lib-anstyle_query  lib-anstyle_query.json
target2/debug/.fingerprint/anstyle-wincon-96e78db764967b09/: lib-anstyle_wincon  lib-anstyle_wincon.json
target2/debug/.fingerprint/anyhow-9c61e8388b25f952/: run-build-script-build-script-build  run-build-script-build-script-build.json
target2/debug/.fingerprint/anyhow-ac4c078c7555bd0c/: lib-anyhow  lib-anyhow.json
target2/debug/.fingerprint/anyhow-ef3f532a3e874254/: build-script-build-script-build  build-script-build-script-build.json
target2/debug/.fingerprint/async-trait-971ca678e3cbb3f9/: lib-async_trait  lib-async_trait.json
target2/debug/.fingerprint/atomic-waker-485e4734f94945b4/: lib-atomic_waker  lib-atomic_waker.json
target2/debug/.fingerprint/base64-00384957a60007b4/: lib-base64  lib-base64.json
target2/debug/.fingerprint/bitflags-b5f87148fc9c5fdd/: lib-bitflags  lib-bitflags.json
target2/debug/.fingerprint/byteorder-436e3834e4390f18/: lib-byteorder  lib-byteorder.json
target2/debug/.fingerprint/bytes-094af595bf028992/: lib-bytes  lib-bytes.json
target2/debug/.fingerprint/calamine-1f79f88a48cc4765/: lib-calamine  lib-calamine.json
target2/debug/.fingerprint/cfg-if-709781a0f9096a35/: lib-cfg_if  lib-cfg_if.json
target2/debug/.fingerprint/clap-dd67d2fafe41d398/: lib-clap  lib-clap.json
target2/debug/.fingerprint/clap_builder-a25d9848e1405297/: lib-clap_builder  lib-clap_builder.json
target2/debug/.fingerprint/clap_derive-e75f321e72f0db95/: lib-clap_derive  lib-clap_derive.json
target2/debug/.fingerprint/clap_lex-6fcf614221e659bf/: lib-clap_lex  lib-clap_lex.json
target2/debug/.fingerprint/codepage-c4956f21af5a4d4f/: lib-codepage  lib-codepage.json
(+426 files in other folders)
