[package]
name = "infolit-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "infolit-web"
path = "src/main.rs"

[dependencies]
infolit-game = { path = "../infolit-game" }
shared-types = { workspace = true }
llm-gateway = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
