[package]
name = "llm-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
